# TER-Composite

./: .gitignore
FEM/: CMakeLists.txt  flexion.vtk
FEM/config/: composite.txt  composite2.txt  composite_longi.txt  composite_simple.txt  flexion.txt  shear.txt  traction.txt
FEM/geo/: meshes.sh  rectangle.geo  simple_rectangle.geo
FEM/mesh/: maillage_fibres.msh  rectangle2_P2.msh
FEM/mesh/beam/: beam_Q1_lc0.00156250.msh  beam_Q1_lc0.00312500.msh  beam_Q1_lc0.0062500.msh  beam_Q1_lc0.0125000.msh  beam_Q1_lc0.0250000.msh  beam_Q1_lc0.0500000.msh  beam_Q1_lc0.10000000.msh  beam_lc0.003125.msh  beam_lc0.00625.msh  beam_lc0.0125.msh  beam_lc0.025.msh  beam_lc0.05.msh  beam_lc0.1.msh
FEM/mesh/composite_convergence/: composite1_vf0.452_10.msh  composite1_vf0.452_20.msh  composite1_vf0.452_8.msh
FEM/mesh/square/: square_Q1_lc0.00781250.msh  square_Q1_lc0.01562500.msh  square_Q1_lc0.03125000.msh  square_Q1_lc0.06250000.msh  square_Q1_lc0.12500000.msh  square_Q1_lc0.25000000.msh  square_Q1_lc0.50000000.msh  square_lc0.00625.msh  square_lc0.0125.msh  square_lc0.025.msh  square_lc0.05.msh  square_lc0.1.msh
FEM/src/: Config.cpp  Config.h  Mesh.cpp  Mesh.h  MeshReader.cpp  Solver.cpp  Solver.h  Tests.cpp  config.cpp  config.h  element.cpp  element.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  meshReader.cpp  meshReader.h  solver.cpp  solver.h  test_composite.cpp  test_composite.h  test_flexion.cpp  test_flexion.h  test_shear.cpp  test_shear.h  test_traction.cpp  test_traction.h  tests.cpp  tests.h  tests_utils.cpp  tests_utils.h
IBM/: main.py  mesh.msh  mesh.py  mesh_Delauney.py  segmentation.py
IBM/labels/: 10_0.07um.json  11_0.07um.json  (+14 more)
meshes/: paraview_meshes.py
resultats/: mesh_table_proprietes_composite1_vf0.452.tex  mesh_table_proprietes_composite26_pore.tex  postprocess.py  validation_summary.txt
(+38 files in other folders)
